[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/entities/characters/Char_Template.png" type="Texture" id=1]
[ext_resource path="res://entities/characters/char_template/char_template.gd" type="Script" id=2]
[ext_resource path="res://entities/characters/char_template/text_controller.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Retro Gaming.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://entities/characters/char_template/additional.gd" type="Script" id=5]
[ext_resource path="res://assets/sounds/player/Interacao_com_os_personagens.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/items/Pegando_o_item.ogg" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.75, 12.5 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "base",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16, 12.5 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 4 )

[node name="CharTemplate" type="KinematicBody2D"]
position = Vector2( -1, 0 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 4, 3.5 )
shape = SubResource( 3 )

[node name="BaseTexture" type="AnimatedSprite" parent="."]
position = Vector2( 2, 0 )
frames = SubResource( 2 )
animation = "base"
flip_h = true

[node name="CheckInteraction" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Collider" type="CollisionShape2D" parent="CheckInteraction"]
position = Vector2( 3, 3.5 )
shape = SubResource( 8 )

[node name="TextController" type="Node2D" parent="."]
position = Vector2( -41, -37 )
scale = Vector2( 0.2, 0.2 )
z_index = 10
z_as_relative = false
script = ExtResource( 3 )
dialog_limit = [ 2, 3, 8 ]
text_list = [ "1", "2", "", "3", "4", "5", "", "6", "" ]

[node name="additional" type="Node2D" parent="TextController"]
script = ExtResource( 5 )

[node name="Text" type="Label" parent="TextController"]
margin_left = 55.0
margin_top = 4.99998
margin_right = 388.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 2
autowrap = true
clip_text = true

[node name="InteractionFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0
pitch_scale = 0.9

[node name="ItemsInteractionFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 24.0

[connection signal="body_entered" from="CheckInteraction" to="." method="_on_CheckInteraction_body_entered"]
[connection signal="body_exited" from="CheckInteraction" to="." method="_on_CheckInteraction_body_exited"]
[connection signal="end_dialog" from="TextController" to="." method="_on_TextController_end_dialog"]
